--- a/src/app/components/form-user/form-user.component.html
+++ b/src/app/components/form-user/form-user.component.html
@@ -1,1 +1,64 @@
-<p>form-user works!</p>
+
+<form (ngSubmit)="onSubmit(userForm)" #userForm="ngForm">
+    <div>
+        <input class="form-control my-2" placeholder="Nombre"  [(ngModel)] = "user.name" name="name" required #name="ngModel" >
+        @if (name.invalid && name.dirty || name.touched) {
+            @if (name.errors!['required']) {
+                <div class="text-danger">El nombre es requerido</div>
+            }
+        }
+    </div>
+    <div>
+        <input class="form-control my-2" placeholder="Apellido" [(ngModel)] = "user.lastname" name="lastname" required #lastname="ngModel">
+        @if (lastname.invalid && lastname.dirty || lastname.touched) {
+            @if (lastname.errors!['required']) {
+                <div class="text-danger">El Apellido es requerido</div>
+            }
+        }
+    </div>
+    <div> 
+        <input type="email" class="form-control my-2" placeholder="Email" [(ngModel)] = "user.email" name="email" required email #email="ngModel">
+        @if (email.invalid && email.dirty || email.touched) {
+            @if (email.errors!['required']) {
+                <div class="text-danger">El Email es requerido</div>
+            }
+            @if (email.errors!['email']) {
+                <div class="text-danger">Debe ser tipo email</div>
+            }
+        }
+    </div>
+    <div>
+        <input type="email" class="form-control my-2" placeholder="UserName" [(ngModel)] = "user.username" name="username" required minlength="4" #username="ngModel">
+        @if (username.invalid && username.dirty || username.touched) {
+            @if (username.errors!['required']) {
+                <div class="text-danger">El username es requerido</div>
+            }
+            @if (username.errors!['minlength']) {
+                <div class="text-danger">Solo debe tener 4 caracteres como minimo el username</div>
+            }
+        }
+    </div>
+    <div>
+        <input type="password" class="form-control my-2" placeholder="password" [(ngModel)] = "user.password" name="password" required minlength="6" #password="ngModel">
+        @if (password.invalid && password.dirty || password.touched) {
+            @if (password.errors!['required']) {
+                <div class="text-danger">la Contraseña es requerido</div>
+            }
+            @if (password.errors!['minlength']) {
+                <div class="text-danger">La contrasela solo debe contar con 6 caracteres como minimo</div>
+            }
+        }
+    </div>
+
+    <div>
+        <button type="submit" class="btn btn-primary my-2" [disabled]="userForm.invalid">
+            {{(user.id > 0)? 'Actualizar': 'Crear'}}
+             Usuario
+        </button>
+
+        <button (click)="clearUser()" type="submit" class="btn btn-secondary my-2">
+           Limpiar
+        </button>
+    </div>
+  
+</form>
