--- a/src/app/components/user-app.component.html
+++ b/src/app/components/user-app.component.html
@@ -4,10 +4,10 @@
     <h3>{{title}}</h3>
     <div class="row">
         <div class="col">
-            form
+            <form-user (newUserEventEmitter)="addUser($event)" [user]="userSelected"/> 
         </div>
         <div class="col">
-            <user [users]="users"/>
+            <user [users]="users" (idUserEventEmitter)="removeUser($event)" (selectedUserEventEmitter)="onSelectedUser($event)"/>
         </div>
     </div>
 </div>
