--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -7,6 +7,8 @@
                 <th>Apellidos</th>
                 <th>email</th>
                 <th>username</th>
+                <th>Remove</th>
+                <th>Actualizar</th>
             </tr>
         </thead>
         <tbody>
@@ -17,6 +19,16 @@
                     <td>{{user.lastname}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.username}}</td>
+                    <td>
+                        <button (click)="onRemoveUser(user.id)" class="btn btn-danger sm">
+                            Remove
+                        </button>
+                    </td>
+                    <td>
+                        <button (click)="onselectedUser(user)" class="btn btn-success">
+                            Actualizar
+                        </button>
+                    </td>
                 </tr>
             }
         </tbody>
