--- a/src/app/components/user-app.component.html
+++ b/src/app/components/user-app.component.html
@@ -1,14 +1,29 @@
-
-
 <div class="container my-4">
-    <h3>{{title}}</h3>
-    <div class="row">
-        <div class="col">
-            <form-user (newUserEventEmitter)="addUser($event)" [user]="userSelected"/> 
-        </div>
-        <div class="col">
-            <user [users]="users" (idUserEventEmitter)="removeUser($event)" (selectedUserEventEmitter)="onSelectedUser($event)"/>
-        </div>
+  <h3>{{ title }}</h3>
+
+  <button class="btn btn-primary" (click)="setOpen()">
+    {{ open == true ? "Cerrar" : "Crear usuario" }}
+  </button>
+  <div class="row">
+    <div class="col">
+      <user
+        [users]="users"
+        (idUserEventEmitter)="removeUser($event)"
+        (selectedUserEventEmitter)="onSelectedUser($event)"
+      />
     </div>
+  </div>
 </div>
 
+@if (open) {
+    <div class="abrir-modal animacion fadeIn">
+
+        <form-user
+          (newUserEventEmitter)="addUser($event)"
+          [user]="userSelected"
+          (openEventEmitter)="setOpen()"
+        />
+    </div>
+
+
+}
