--- a/src/app/components/form-user/form-user.component.html
+++ b/src/app/components/form-user/form-user.component.html
@@ -1,89 +1,98 @@
-
-<div class="modal animacion fadeIn" tabindex="-1" style="display: block;">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Formulario {{(user.id > 0)? 'Actualizar' : 'Crear'}} Usuario</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="onOpen()"></button>
+<div class="card">
+    <div class="card-content">
+        <div class="card-header">
+            <h5 class="card-title">Form {{(user.id > 0)? 'Update': 'Create'}} User</h5>
         </div>
-        <div class="modal-body">
-          
+        <div class="card-body">
+
             <form (ngSubmit)="onSubmit(userForm)" #userForm="ngForm">
+
                 <div>
-                    <input class="form-control my-2" placeholder="Nombre"  [(ngModel)] = "user.name" name="name" required #name="ngModel" >
-                    @if (name.invalid && name.dirty || name.touched) {
-                        @if (name.errors!['required']) {
-                            <div class="text-danger">El nombre es requerido</div>
-                        }
+                    <input placeholder="Name" name="name" [(ngModel)]="user.name" class="form-control my-2" required
+                        #name="ngModel">
+
+                    @if (name.invalid && (name.dirty || name.touched)) {
+                    @if(name.errors!['required']){
+                    <div class="text-danger">
+                        Nombre es requerido
+                    </div>
+                    }
                     }
                 </div>
                 <div>
-                    <input class="form-control my-2" placeholder="Apellido" [(ngModel)] = "user.lastname" name="lastname" required #lastname="ngModel">
-                    @if (lastname.invalid && lastname.dirty || lastname.touched) {
-                        @if (lastname.errors!['required']) {
-                            <div class="text-danger">El Apellido es requerido</div>
-                        }
+                    <input placeholder="Lastname" name="lastname" [(ngModel)]="user.lastname" required
+                        class="form-control my-2" #lastname="ngModel">
+
+                    @if (lastname.invalid && (lastname.dirty || lastname.touched)) {
+                    @if(lastname.errors!['required']){
+                    <div class="text-danger">
+                        El lastname es requerido
+                    </div>
+                    }
                     }
                 </div>
-                <div> 
-                    <input type="email" class="form-control my-2" placeholder="Email" [(ngModel)] = "user.email" name="email" required email #email="ngModel">
-                    @if (email.invalid && email.dirty || email.touched) {
-                        @if (email.errors!['required']) {
-                            <div class="text-danger">El Email es requerido</div>
-                        }
-                        @if (email.errors!['email']) {
-                            <div class="text-danger">Debe ser tipo email</div>
-                        }
+
+                <div>
+                    <input placeholder="Email" name="email" [(ngModel)]="user.email" class="form-control my-2"
+                        type="email" required email #email="ngModel">
+                    @if (email.invalid && (email.dirty || email.touched)) {
+                    @if(email.errors!['required']){
+                    <div class="text-danger">
+                        El email es requerido
+                    </div>
+                    }
+                    @if(email.errors!['email']){
+                    <div class="text-danger">
+                        El email no tiene formato correcto!
+                    </div>
+                    }
                     }
                 </div>
                 <div>
-                    <input type="email" class="form-control my-2" placeholder="UserName" [(ngModel)] = "user.username" name="username" required minlength="4" #username="ngModel">
-                    @if (username.invalid && username.dirty || username.touched) {
-                        @if (username.errors!['required']) {
-                            <div class="text-danger">El username es requerido</div>
-                        }
-                        @if (username.errors!['minlength']) {
-                            <div class="text-danger">Solo debe tener 4 caracteres como minimo el username</div>
-                        }
+                    <input placeholder="Username" name="username" [(ngModel)]="user.username"
+                        class="form-control my-2" required minlength="8" #username="ngModel">
+                    @if (username.invalid && (username.dirty || username.touched)) {
+                    @if(username.errors!['required']){
+                    <div class="text-danger">
+                        El username es requerido
+                    </div>
+                    }
+                    @if(username.errors!['minlength']){
+                    <div class="text-danger">
+                        Username debe de tener al menos 8 caracteres!
+                    </div>
+                    }
                     }
                 </div>
                 <div>
-                    <input type="password" class="form-control my-2" placeholder="password" [(ngModel)] = "user.password" name="password" required minlength="6" #password="ngModel">
-                    @if (password.invalid && password.dirty || password.touched) {
-                        @if (password.errors!['required']) {
-                            <div class="text-danger">la Contraseña es requerido</div>
-                        }
-                        @if (password.errors!['minlength']) {
-                            <div class="text-danger">La contrasela solo debe contar con 6 caracteres como minimo</div>
-                        }
+                    <input placeholder="Password" name="password" type="password" [(ngModel)]="user.password"
+                        class="form-control my-2" required minlength="6" #password="ngModel">
+                    @if (password.invalid && (password.dirty || password.touched)) {
+                    @if(password.errors!['required']){
+                    <div class="text-danger">
+                        El password es requerido
+                    </div>
+                    }
+                    @if(password.errors!['minlength']){
+                    <div class="text-danger">
+                        Password debe de tener al menos 6 caracteres!
+                    </div>
+                    }
                     }
                 </div>
-            
+
                 <div>
-                    <button type="submit" class="btn btn-primary my-2" [disabled]="userForm.invalid">
-                        {{(user.id > 0)? 'Actualizar': 'Crear'}}
-                         Usuario
+                    <button type="submit" class="btn btn-primary m-2" [disabled]="userForm.invalid">
+                        {{(user.id > 0)? 'Update': 'Create'}}
                     </button>
-            
-                    <button (click)="clearUser()" type="submit" class="btn btn-secondary my-2">
-                       Limpiar
+
+                    <button type="button" class="btn btn-secondary my-2" (click)="clearUser(userForm)">
+                        Clear
                     </button>
                 </div>
-              
+
             </form>
-
-
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="onOpen()">Close</button>
-          
-        </div>
-      </div>
+
     </div>
-  </div>
-
-
-
-
-
-
+</div>
