--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,40 +1,45 @@
-@if (users.length > 0) {
-    <table class="table table-hover table-striped">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nombres</th>
-                <th>Apellidos</th>
-                <th>email</th>
-                <th>username</th>
-                <th>Remove</th>
-                <th>Actualizar</th>
-            </tr>
-        </thead>
-        <tbody>
-            @for (user of users; track $index) {
-                <tr>
-                    <td>{{user.id}}</td>
-                    <td>{{user.name}}</td>
-                    <td>{{user.lastname}}</td>
-                    <td>{{user.email}}</td>
-                    <td>{{user.username}}</td>
-                    <td>
-                        <button (click)="onRemoveUser(user.id)" class="btn btn-danger sm">
-                            Remove
-                        </button>
-                    </td>
-                    <td>
-                        <button (click)="onselectedUser(user)" class="btn btn-success">
-                            Actualizar
-                        </button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+<h3>{{title}}</h3>
+
+<button class="btn btn-primary my-3" [routerLink]="['/users/create']">Crear Usuario</button>
+
+@if (users.length == 0) {
+<div class="alert alert-warning">No hay registros en el sistema!</div>
 } @else {
-    <div class="alert alert-warning">
-        No hay usuarios disponibles
-    </div>
+<table class="table table-hover table-striped">
+    <thead>
+        <tr>
+            <!-- <th>id</th> -->
+            <th>name</th>
+            <th>lastname</th>
+            <th>email</th>
+            <th>username</th>
+            <th>remove</th>
+            <th>update</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (user of users; track $index) {
+        <tr>
+            <!-- <td> {{user.id}} </td> -->
+            <td> {{user.name}} </td>
+            <td> {{user.lastname}} </td>
+            <td> {{user.email}} </td>
+            <td> {{user.username}} </td>
+            <td>
+                <button class="btn btn-danger btn-sm"
+                (click)="onRemoveUser(user.id)"
+                >
+                    remove
+                </button>
+            </td>
+            <td>
+                <button class="btn btn-info btn-sm"
+                [routerLink]="['/users/edit', user.id]">
+                    update
+                </button>
+            </td>
+        </tr>
+        }
+    </tbody>
+</table>
 }
